C++/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:11:30 **** Rebuild of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
Info: Nothing to build for Ders12  Sizeof
17:12:17 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
..\src\Ders12.cpp: In function 'int main()':
..\src\Ders12.cpp:27:53: error: expected primary-expression before '.' token
   27 |  cout << endl <<"Struct bellekte " << sizeof(student.a) << " byte yer kaplar" << endl;
      |                                                     ^
17:13:12 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
17:13:25 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
17:16:28 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
17:16:56 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
17:17:48 **** Rebuild of configuration Debug for project Ders13  Dinamik Bellek Yönetimi ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders13.o" "..\\src\\Ders13.cpp" 
g++ -o "Ders13  Dinamik Bellek Yönetimi.exe" "src\\Ders13.o" 
Info: Nothing to build for Ders13  Dinamik Bellek Yönetimi
17:18:41 **** Incremental Build of configuration Debug for project Ders13  Dinamik Bellek Yönetimi ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders13.o" "..\\src\\Ders13.cpp" 
g++ -o "Ders13  Dinamik Bellek Yönetimi.exe" "src\\Ders13.o" 
17:19:16 **** Rebuild of configuration Debug for project Ders15  Dinamik Bellek Yönetimi ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders15.o" "..\\src\\Ders15.cpp" 
g++ -o "Ders15  Dinamik Bellek Yönetimi.exe" "src\\Ders15.o" 
17:20:53 **** Rebuild of configuration Debug for project Ders16  Null Pointer, Dangling Referans ve Pointerler ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders16.o" "..\\src\\Ders16.cpp" 
g++ -o "Ders16  Null Pointer, Dangling Referans ve Pointerler.exe" "src\\Ders16.o" 
17:21:53 **** Incremental Build of configuration Debug for project Ders16  Null Pointer, Dangling Referans ve Pointerler ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders16.o" "..\\src\\Ders16.cpp" 
g++ -o "Ders16  Null Pointer, Dangling Referans ve Pointerler.exe" "src\\Ders16.o" 
17:22:27 **** Incremental Build of configuration Debug for project Ders16  Null Pointer, Dangling Referans ve Pointerler ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders16.o" "..\\src\\Ders16.cpp" 
g++ -o "Ders16  Null Pointer, Dangling Referans ve Pointerler.exe" "src\\Ders16.o" 
Info: Nothing to build for Ders16  Null Pointer, Dangling Referans ve Pointerler
17:22:44 **** Incremental Build of configuration Debug for project Ders16  Null Pointer, Dangling Referans ve Pointerler ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders16.o" "..\\src\\Ders16.cpp" 
g++ -o "Ders16  Null Pointer, Dangling Referans ve Pointerler.exe" "src\\Ders16.o" 
17:23:33 **** Incremental Build of configuration Debug for project Ders16  Null Pointer, Dangling Referans ve Pointerler ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders16.o" "..\\src\\Ders16.cpp" 
g++ -o "Ders16  Null Pointer, Dangling Referans ve Pointerler.exe" "src\\Ders16.o" 
Info: Nothing to build for Ders16  Null Pointer, Dangling Referans ve Pointerler
Info: Nothing to build for Ders16  Null Pointer, Dangling Referans ve Pointerler
Info: Nothing to build for Ders16  Null Pointer, Dangling Referans ve Pointerler
Info: Nothing to build for Ders16  Null Pointer, Dangling Referans ve Pointerler
17:25:07 **** Rebuild of configuration Debug for project Ders17  Foreach Döngüsü ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders17.o" "..\\src\\Ders17.cpp" 
g++ -o "Ders17  Foreach Döngüsü.exe" "src\\Ders17.o" 
17:25:40 **** Incremental Build of configuration Debug for project Ders17  Foreach Döngüsü ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders17.o" "..\\src\\Ders17.cpp" 
g++ -o "Ders17  Foreach Döngüsü.exe" "src\\Ders17.o" 
Info: Nothing to build for Ders17  Foreach Döngüsü
Info: Nothing to build for Ders17  Foreach Döngüsü
Info: Nothing to build for Ders17  Foreach Döngüsü
17:26:19 **** Incremental Build of configuration Debug for project Ders17  Foreach Döngüsü ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders17.o" "..\\src\\Ders17.cpp" 
g++ -o "Ders17  Foreach Döngüsü.exe" "src\\Ders17.o" 
17:28:12 **** Rebuild of configuration Debug for project Ders19  Sýnýflar (Class) ve Nesne Yönelimli Programlamaya(OOP) ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders19.o" "..\\src\\Ders19.cpp" 
g++ -o "Ders19  Sýnýflar (Class) ve Nesne Yönelimli Programlamaya(OOP).exe" "src\\Ders19.o" 
17:29:14 **** Rebuild of configuration Debug for project Ders20  Header Dosyalarý ve Implementasyon ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders20.o" "..\\src\\Ders20.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Employee.o" "..\\src\\Employee.cpp" 
g++ -o "Ders20  Header Dosyalarý ve Implementasyon.exe" "src\\Ders20.o" "src\\Employee.o" 
17:30:32 **** Rebuild of configuration Debug for project Ders21  Private Eriþim Belirleyicisi ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders21.o" "..\\src\\Ders21.cpp" 
g++ -o "Ders21  Private Eriþim Belirleyicisi.exe" "src\\Ders21.o" 
17:31:30 **** Rebuild of configuration Debug for project Ders22  Pointerlar ve Classlar ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders22.o" "..\\src\\Ders22.cpp" 
g++ -o "Ders22  Pointerlar ve Classlar.exe" "src\\Ders22.o" 
17:32:20 **** Incremental Build of configuration Debug for project Ders22  Pointerlar ve Classlar ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders22.o" "..\\src\\Ders22.cpp" 
g++ -o "Ders22  Pointerlar ve Classlar.exe" "src\\Ders22.o" 
Info: Nothing to build for Ders22  Pointerlar ve Classlar
17:33:15 **** Incremental Build of configuration Debug for project Ders22  Pointerlar ve Classlar ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders22.o" "..\\src\\Ders22.cpp" 
g++ -o "Ders22  Pointerlar ve Classlar.exe" "src\\Ders22.o" 
17:33:42 **** Incremental Build of configuration Debug for project Ders22  Pointerlar ve Classlar ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders22.o" "..\\src\\Ders22.cpp" 
g++ -o "Ders22  Pointerlar ve Classlar.exe" "src\\Ders22.o" 
